--- a/style.css
+++ b/style.css
@@ -10,9 +10,10 @@ body {
 
 
 
-  font-family: 'FiraSansRegular';
-  font-weight: normal;
-  font-style: normal;
+  p { 
+   font-family: 'CMUSerifRoman'; 
+   font-weight: normal; 
+   font-style: normal; 
 }
 
 body, pre, pre code {
