--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 
   p { 
-   font-family: 'GFSDidotRegular'; 
+   font-family: 'MontserratRegular'; 
    font-weight: normal; 
    font-style: normal; 
 }
