--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ h1, h2 {
 h1 {
   border-bottom-width: 10px;
 }
+  h1 { 
+  border-bottom-width: 20px;
+  text-align: center;
+  }
 
 h2 {
   border-bottom-width: 5px;
