--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
 
 
 
-  p { 
-   font-family: 'MontserratRegular'; 
+p { 
+   font-family: 'ClearSansLightRegular'; 
    font-weight: normal; 
    font-style: normal; 
 }
