--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ a, a:visited {
   color: #48820f;
 }
 
-h1, h2 {
+h2 {
   display: inline-block;
   border-bottom-style: solid;
   border-bottom-color: #B45F04;
