--- a/style.css
+++ b/style.css
@@ -9746,11 +9746,11 @@ table-primary, table-secondary, table-success, table-info, table-warning, table-
 
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://uploads2.wikiart.org/images/michelangelo/sketch-of-fortifications-of-porta-del-prato-in-florence-ground-floor-plan.jpg");
-  height: 50%;
+  height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: absolute;
+  position: relative;
 }
 
 .hero-text {
